# LR7

./: 28.txt
Tasks/: CMakeLists.txt  Tasks.cpp  func.cpp  func.h
